--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "-{[secretary]}- prototype",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,5 +24,10 @@
     "ideas"
   ],
   "author": "bs",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "mongodb": "^3.1.8",
+    "mongoose": "^5.3.3",
+    "uuid": "^3.3.2"
+  }
 }
