Morning commit... forgot last night

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "author": "bs",
   "license": "ISC",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.2",
     "mongodb": "^3.1.8",
     "mongoose": "^5.3.3",
     "uuid": "^3.3.2"
