--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cheerio": "^1.0.0-rc.2",
     "mongodb": "^3.1.8",
     "mongoose": "^5.3.3",
+    "shuffle-array": "^1.0.1",
     "uuid": "^3.3.2"
   }
 }
